# rust-leetcode

./: Cargo.toml  exercises.toml  template.txt
exercises/teste/: teste.rs
notes/: ex13.txt
src/: exercise.rs  generate.rs  lib.rs  main.rs  run.rs
src/exercises/: ex13.rs  ex20.rs  ex21.rs  mod.rs
